--- a/404.html
+++ b/404.html
@@ -15,10 +15,15 @@
       width: 100vw;
       position: absolute;
     }
+    a {
+      text-decoration: none;
+      color: black;
+    }
   </style>
   <body>
     <h1>404 - Not Found</h1>
     <p id="loc"></p>
+    <button><a href="index.html">Back to Website</a></button>
     <script>
       var loc = document.getElementById('loc');
       loc.innerHTML =
